Fixed the Bug with hover actually

--- a/main.html
+++ b/main.html
@@ -289,7 +289,6 @@
                                 <li>Learned to identify and mitigate various types of cyber threats.</li>
                                 <li>Developed technical support skills specific to cybersecurity.</li>
                                 <li>Completed practical labs and simulations to apply cybersecurity concepts.</li>
-                                <li>Participated in online forums and study groups to enhance understanding.</li>
                             </ul>
                         </div>
                     </div>
@@ -341,11 +340,22 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="certification-item">
+                        <h3>Software Processes and Agile Practices</h3>
+                        <p>University of Alberta</p>
+                        <div class="item-details">
+                            <ul>
+                                <li>Studied various software development methodologies, including Agile, Scrum, and Extreme Programming (XP).</li>
+                                <li>Applied Agile principles to real-world case studies and projects.</li>
+                                <li>Learned about software process improvement models, such as CMMI and ISO standards.</li>
+                                <li>Explored techniques for managing requirements, estimating project timelines, and tracking progress in Agile environments.</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-
-        <!-- Projects Section -->
+        
         <div class="section">
             <div class="section-content">
                 <h2>Projects</h2>
@@ -388,9 +398,23 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="project-item">
+                        <h3>Theater Shows - Technical & Marketing Team</h3>
+                        <p>2023 - 2024</p>
+                        <div class="item-details">
+                            <ul>
+                                <li>Contributed to theater productions as a member of the technical and marketing team.</li>
+                                <li>Collaborated on technical requirements including sound, lighting, and backstage logistics.</li>
+                                <li>Assisted in marketing and promoting theater shows through various channels.</li>
+                                <li>Provided support during rehearsals and performances by operating equipment and assisting performers.</li>
+                                <li>Participated in set construction, stage design, and prop management activities.</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        
 
         <div class="section">
             <div class="section-content">
